--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Set up ARM GCC Toolchain
       run: |
-        choco install gcc-arm-none-eabi --version=10.3.1  # Install specific version of ARM GCC toolchain
+        choco install gcc-arm-none-eabi --version=10.3.1
 
     - name: Set up CMake and Ninja
       run: |
@@ -24,19 +24,20 @@ jobs:
 
     - name: Create Build Directory
       run: |
-        mkdir .\build  # Create a build directory
+        mkdir .\firmware\BMSServerApp\build  # Create a build directory
 
     - name: Configure CMake
       run: |
-        cd .\build  # Change to build directory
+        cd .\firmware\BMSServerApp\build  # Change to build directory
         cmake -DCMAKE_TOOLCHAIN_FILE="../toolchain.cmake" -G "Ninja" ..  # Run CMake with the toolchain file
 
     - name: Build Project
       run: |
-        cd .\build  # Change to build directory
+        cd .\firmware\BMSServerApp\build  # Change to build directory
         ninja  # Build the project
 
     - name: Copy Binary File
       run: |
-        cd .\build  # Change to build directory
+        cd .\firmware\BMSServerApp\build
         if exist *.bin copy *.bin ..  # Copy the binary file to the project root if it exists
+      continue-on-error: true
