--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-firmware/BMSServerApp/build/*
 .vscode/*
+
+firmware/BMSServerApp/build/*
+!firmware/BMSServerApp/build/*.bin
+!firmware/BMSServerApp/build/
 
