--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "SCRUM-16-Inspection-CI-CD-pipe-intergration-build-automation-in-github" ]
 
+env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -16,14 +19,14 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
 
     - name: arm-none-eabi-gcc
       uses: ryanwinter/arm-none-eabi-gcc@master
       with:
-          release: '10.3-2021.10' # The arm-none-eabi-gcc release to use.
+          release: '10.3-2021.10'
 
     - name: Install Ninja
       uses: seanmiddleditch/gha-setup-ninja@v4
