--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,9 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "SCRUM-16-Inspection-CI-CD-pipe-intergration-build-automation-in-github" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "SCRUM-16-Inspection-CI-CD-pipe-intergration-build-automation-in-github" ]
+    branches: [ "main" ]
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
