Modify back main branch build automation yml. Do not modify this file.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,9 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "SCRUM-10-Create-a-function-in-master-so-it-can-write-values-in-mysql-database" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "SCRUM-10-Create-a-function-in-master-so-it-can-write-values-in-mysql-database" ]
+    branches: [ "main" ]
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
