--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,10 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
+    branches: [ "main" ]
+  workflow_dispatch:   # This line allows manual triggering of the action
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
