--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,10 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
+  workflow_dispatch:  # Enable manual trigger
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
@@ -15,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest]
-        type: [Debug, Release]
+        type: [Debug, Release, Test]
 
     steps:
     - name: Checkout code
@@ -23,10 +24,13 @@ jobs:
       with:
         submodules: recursive
 
-    - name: arm-none-eabi-gcc
-      uses: ryanwinter/arm-none-eabi-gcc@master
-      with:
-          release: '10.3-2021.10'
+    - name: Download and Install arm-none-eabi-gcc
+      run: |
+        curl -L -o gcc-arm-none-eabi.zip https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-win32.zip
+        mkdir gcc-arm
+        tar -xf gcc-arm-none-eabi.zip -C gcc-arm --strip-components=1
+        echo "Adding GCC to PATH"
+        echo "C:\gcc-arm\bin" >> $GITHUB_PATH
 
     - name: Install Ninja
       uses: seanmiddleditch/gha-setup-ninja@v4
@@ -37,7 +41,11 @@ jobs:
     - name: Build Project
       run: |
         cd .\firmware\BMSServerApp
-        cmake -Bbuild -GNinja -DCMAKE_TOOLCHAIN_FILE="../toolchain.cmake" -DCMAKE_BUILD_TYPE="${{ matrix.type }}"
+        if [ "${{ matrix.type }}" == "Test" ]; then
+          cmake -Bbuild -GNinja -DCMAKE_TOOLCHAIN_FILE="../toolchain.cmake" -DCMAKE_BUILD_TYPE="Debug" -DTEST=ON
+        else
+          cmake -Bbuild -GNinja -DCMAKE_TOOLCHAIN_FILE="../toolchain.cmake" -DCMAKE_BUILD_TYPE="${{ matrix.type }}"
+        fi
         cmake --build build
 
     - name: Convert ELF to BIN
