--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
   pull_request:
     branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
-  workflow_dispatch:   # This line allows manual triggering of the action
+  workflow_dispatch:  # Enable manual trigger
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
@@ -24,10 +24,13 @@ jobs:
       with:
         submodules: recursive
 
-    - name: arm-none-eabi-gcc
-      uses: ryanwinter/arm-none-eabi-gcc@master
-      with:
-          release: '10.3-2021.10'
+    - name: Download and Install arm-none-eabi-gcc
+      run: |
+        curl -L -o gcc-arm-none-eabi.zip https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-win32.zip
+        mkdir gcc-arm
+        tar -xf gcc-arm-none-eabi.zip -C gcc-arm --strip-components=1
+        echo "Adding GCC to PATH"
+        echo "C:\gcc-arm\bin" >> $GITHUB_PATH
 
     - name: Install Ninja
       uses: seanmiddleditch/gha-setup-ninja@v4
