--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,10 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "SCRUM-10-Create-a-function-in-master-so-it-can-write-values-in-mysql-database" ]
+    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
   pull_request:
-    branches: [ "SCRUM-10-Create-a-function-in-master-so-it-can-write-values-in-mysql-database" ]
+    branches: [ "SCRUM-20-Implement-Mosfet-control-code" ]
+  workflow_dispatch:  # Enable manual trigger
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
