Scrum 14 design state machine integrated with mosfet control logic (#9)
* Add mutiplexer select logic to read adc according
 to different module hardware design.
SCRUM-14

* Update cmake-multi-platform.yml

* Update cmake-multi-platform.yml

* Replaced float calculation by all interger calculation.
Applied moving average filter for adc read values.
Added function declare and introduction.
Init intergration test, tobe continue.
SCRUM-14

* Add deepsleep mode.
Add actual current calibration number.
SCRUM-14

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -2,9 +2,9 @@ name: BMS_STM32L152RE Build Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "SCRUM-14-design-state-machine-integrated-with-mosfet-control-logic" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "SCRUM-14-design-state-machine-integrated-with-mosfet-control-logic" ]
   workflow_dispatch:  # Enable manual trigger
 
 env:
